--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -1,9 +1,91 @@
 {
+    "english" : "english" ,
+    "arabic" : "arabic" ,
+
     "link" : {
     "home" : "home",
     "packages": "packages",
     "categories": "categories",
     "aboutUs": "about us",
     "contactUs": "contact us"
+    },
+    
+    "auth" : {
+    "register" : "register",
+    "logIn" : "log in"
+    },
+
+    "profile" : {
+    "signOut" : "sign out" ,
+    "history" : "history" ,
+    "booking" : "booking" ,
+    "home" : "home page" 
+    },
+
+    "categories" : {
+    "reels" : "reels" ,
+    "motion": "motion" ,
+    "designs":"designs",
+    "views" : "views",
+    "save" : "save",
+    "comments" : {
+    "comments" : "comments",
+    "sortBy" : "sort by",
+    "TopComments" : "Top comments",
+    "NewestFirst" : "Newest first",
+    "OldestFirst" : "Oldest first",
+    "AddAComment" : "Add a comment...",
+    "cancel" : "cancel" ,
+    "AddComment" : "Add Comment"
+    }
+    },
+
+    "package" : {
+    "level" : {
+    "basic" : "basic" ,
+    "primary" : "primary",
+    "secondray" : "primary",
+    "advanced" : "advanced"
+    },
+    "getPackage" : "get package" ,
+    "whatsIncluded" : "whats included :",
+    "reels videos" : "reels videos",
+    "motion graphics video 2d" : "motion graphics video 2d" ,
+    "designs" : "designs"  ,
+    "design logo" : "design logo"  ,
+    "ux ui design" : "ux ui design" ,
+    "mobile application" : "mobile application"  ,
+    "web application" :  "web application"
+    },
+    "about" : {
+
+    },
+    "footer" : {
+    "title" : " We would love to have you join our marketing agency. Our goal is to take the project to the highest levels" ,
+    "about": "about us",
+    "Company History" :  "Company History",
+    "Meet the Team" :  "Meet the Team",
+    "Employee Handbook" :  "Employee Handbook",
+    "Packages" :  "Packages",
+    "our services" :  "our services",
+    "reels videos" :  "reels videos",
+    "motion graphics" :  "motion graphics",
+    "designs" :  "designs",
+    "ux ui" :  "ux ui",
+    "web application" :  "web application",
+    "mobile application" :  "mobile application",
+    "word press" :  "word press",
+    "Tools used" :  "Tools used",
+    "Adobe Premiere" :  "Adobe Premiere",
+    "photo shop" :  "photo shop",
+    "angular" :  "angular",
+    "react js" :  "react js",
+    "Helpful Links" :  "Helpful Links" ,
+    "FAQs" :  "FAQs" ,
+    "Support" :  "Support" ,
+    "Complaints" :  "Complaints" 
     }
 }
+
+
+    
