--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -1,9 +1,121 @@
 {
-    "link" : {
-    "home" : "h",
-    "packages": "packages",
-    "categories": "categories",
-    "aboutUs": "about us",
-    "contactUs": "contact us"
+    "english": "الإنجليزية",
+    "arabic": "العربية",
+    "link": {
+        "home": "الرئيسية",
+        "packages": "الباقات",
+        "categories": "التصنيفات",
+        "aboutUs": "من نحن",
+        "contactUs": "اتصل بنا"
+    },
+    "auth": {
+        "register": "تسجيل",
+        "logIn": "تسجيل الدخول",
+        "userNameRequired": "اسم المستخدم مطلوب!",
+        "userNameValid": "يرجى إدخال اسم مستخدم صالح!",
+        "emailRequired": "البريد الإلكتروني مطلوب!",
+        "emailValid": "يرجى إدخال بريد إلكتروني صالح!",
+        "passwordRequired": "كلمة المرور مطلوبة!",
+        "passwordValid": "يرجى إدخال كلمة مرور صالحة!",
+        "signGoggle": "المتابعة باستخدام Google",
+        "or": "أو",
+        "invalidLoginCredentials": "بيانات تسجيل الدخول غير صحيحة",
+        "noAccount": "ليس لديك حساب؟",
+        "yesAccount": "هل لديك حساب بالفعل؟",
+        "createOne": "إنشاء حساب"
+    },
+    "profile": {
+        "signOut": "تسجيل الخروج",
+        "history": "السجل",
+        "booking": "الحجوزات",
+        "home": "الصفحة الرئيسية"
+    },
+    "categories": {
+        "reels": "ريلز",
+        "motion": "الموشن",
+        "designs": "التصميمات",
+        "views": "المشاهدات",
+        "save": "حفظ",
+        "comments": {
+            "comments": "التعليقات",
+            "sortBy": "ترتيب حسب",
+            "topComments": "أفضل التعليقات",
+            "newestFirst": "الأحدث أولًا",
+            "oldestFirst": "الأقدم أولًا",
+            "addAComment": "أضف تعليقًا...",
+            "cancel": "إلغاء",
+            "addComment": "إضافة تعليق",
+            "editComment" : "تعديل التعليق",
+            "Edit" : "تعديل" ,
+            "Remove" : "إزالة" 
+        }
+    },
+    "package": {
+        "level": {
+            "basic": "أساسي",
+            "primary": "أولي",
+            "secondray": "ثانوي",
+            "advanced": "متقدم"
+        },
+        "ourPackages": "باقاتنا",
+        "title": "حلول مخصصة لنجاح أعمالك",
+        "getPackage": "احصل على الباقة",
+        "whatsIncluded": "ما الذي يتضمنه:",
+        "reels videos": "فيديوهات الريلز",
+        "motion graphics video 2d": "فيديو موشن جرافيكس ثنائي الأبعاد",
+        "designs": "التصميمات",
+        "design logo": "تصميم الشعار",
+        "ux ui design": "تصميم واجهات وتجربة المستخدم",
+        "mobile application": "تطبيقات الهاتف المحمول",
+        "web application": "تطبيقات الويب"
+    },
+    "about": {
+        "ourAbout": "من نحن",
+        "ourServices": "خدماتنا",
+        "mz": "وكالة M&Z للتسويق",
+        "paragraph": "في وكالة M&Z للتسويق، نحن شغوفون بإنشاء تجارب رقمية مبتكرة تعزز العلامات التجارية وتحقق النجاح. مع فريق من الخبراء المبدعين والمتخصصين في التكنولوجيا، نقدم مجموعة متكاملة من الخدمات المصممة خصيصًا لتلبية احتياجات عملك.",
+        "titleReels": "🎬 ريلز وموشن جرافيكس",
+        "titleUxUi": "🎨 تصميم واجهات وتجربة المستخدم",
+        "titleDesign": "🖌 العلامات التجارية والتصميم الجرافيكي",
+        "titleWebMobileApp": "💻 تطبيقات الويب والهاتف المحمول",
+        "list": {
+            "reelsOne": "ريلز جذابة تجذب الانتباه وتعزز الحضور على وسائل التواصل الاجتماعي.",
+            "reelsTwo": "موشن جرافيكس ديناميكي يعزز السرد البصري.",
+            "reelsThree": "تحرير فيديو احترافي لضمان تأثير بصري عالي الجودة.",
+            "uxUiOne": "تصميم واجهات مستخدم مبتكرة تعزز الجمالية وسهولة الاستخدام.",
+            "uxUiTwo": "أبحاث تجربة المستخدم المتعمقة لإنشاء تصميمات تركز على العملاء.",
+            "uxUiThree": "نماذج تفاعلية وخطوط تصميم تسهل عملية التطوير.",
+            "designOne": "تصميم هوية العلامة التجارية يعكس رؤيتك.",
+            "designTwo": "تصميم شعارات وعناصر بصرية إبداعية تترك انطباعًا دائمًا.",
+            "designThree": "مواد تسويقية ورسومات لوسائل التواصل الاجتماعي وتصاميم مطبوعة متميزة.",
+            "webMobileAppOne": "تطوير مواقع ويب مخصصة بواجهة مستخدم حديثة وأداء محسن.",
+            "webMobileAppTwo": "منصات تجارة إلكترونية متجاوبة تعزز المبيعات عبر الإنترنت.",
+            "webMobileAppThree": "تطبيقات مميزة للهواتف الذكية على أنظمة iOS و Android."
+        }
+    },
+    "footer": {
+        "title": "نود أن تنضم إلى وكالتنا التسويقية. هدفنا هو الارتقاء بالمشروع إلى أعلى المستويات.",
+        "about": "من نحن",
+        "companyHistory": "تاريخ الشركة",
+        "meetTheTeam": "تعرف على الفريق",
+        "employeeHandbook": "دليل الموظف",
+        "packages": "الباقات",
+        "ourServices": "خدماتنا",
+        "reelsVideos": "فيديوهات الريلز",
+        "motionGraphics": "الموشن جرافيكس",
+        "designs": "التصميمات",
+        "uxUi": "تصميم الواجهات والتجربة",
+        "webApplication": "تطبيقات الويب",
+        "mobileApplication": "تطبيقات الهاتف المحمول",
+        "wordpress": "ووردبريس",
+        "toolsUsed": "الأدوات المستخدمة",
+        "adobePremiere": "أدوبي بريمير",
+        "photoshop": "فوتوشوب",
+        "angular": "أنجولار",
+        "reactJs": "ريأكت جي إس",
+        "helpfulLinks": "روابط مفيدة",
+        "faqs": "الأسئلة الشائعة",
+        "support": "الدعم",
+        "complaints": "الشكاوى"
     }
 }
