--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -11,25 +11,63 @@
     "auth": {
         "register": "تسجيل",
         "logIn": "تسجيل الدخول",
+    "validators" : {
         "userNameRequired": "اسم المستخدم مطلوب!",
         "userNameValid": "يرجى إدخال اسم مستخدم صالح!",
         "emailRequired": "البريد الإلكتروني مطلوب!",
         "emailValid": "يرجى إدخال بريد إلكتروني صالح!",
         "passwordRequired": "كلمة المرور مطلوبة!",
         "passwordValid": "يرجى إدخال كلمة مرور صالحة!",
-        "signGoggle": "المتابعة باستخدام Google",
+        "fullNameRequired": "أدخل اسمك الكامل",
+        "phoneRequired": "أدخل رقم هاتفك",
+        "phoneValid": "اكتب رقم هاتف صالح"
+    },
+        "signGoogle": "المتابعة باستخدام Google",
         "or": "أو",
         "invalidLoginCredentials": "بيانات تسجيل الدخول غير صحيحة",
         "noAccount": "ليس لديك حساب؟",
         "yesAccount": "هل لديك حساب بالفعل؟",
-        "createOne": "إنشاء حساب"
+        "createOne": "إنشاء حساب",
+    "placeHolder": {
+        "userName": "اسم المستخدم",
+        "password": "كلمة المرور",
+        "email": "عنوان البريد الإلكتروني",
+        "enterEmail": "أدخل بريدك الإلكتروني",
+        "fullName": "الاسم الكامل",
+        "phone": "أدخل رقم هاتفك"
     },
+    "label": {
+        "phone": "رقم الهاتف"
+    }
+    },
+
     "profile": {
         "signOut": "تسجيل الخروج",
         "history": "السجل",
         "booking": "الحجوزات",
+        "orders": "الطلبات",
         "home": "الصفحة الرئيسية"
     },
+
+    "booking": {
+    "title": "الحجز",
+    "addCategory": "إضافة فئة",
+    "categoryErrorMsg": "يجب إدخال نوع الفئة المطلوبة للحجز.",
+    "optional": "اختياري",
+    "validators": {
+        "enterCategory": "أدخل فئتك"
+    },
+    "placeHolder": {
+    "enterCategory": "أدخل فئة",
+    "enterDetails": "أدخل تفاصيلك"
+    },
+    "label": {
+        "category": "اختر الفئة:",
+        "categoryDetails": "تفاصيل عن الفئات"
+    },
+    "btnName": "احجز الآن"
+    },
+    
     "categories": {
         "reels": "ريلز",
         "motion": "الموشن",
@@ -78,6 +116,10 @@
         "titleUxUi": "🎨 تصميم واجهات وتجربة المستخدم",
         "titleDesign": "🖌 العلامات التجارية والتصميم الجرافيكي",
         "titleWebMobileApp": "💻 تطبيقات الويب والهاتف المحمول",
+        "p-reels" : "نحن نُحيي علامتك التجارية من خلال محتوى فيديو مذهل وعالي الجودة. يقوم فريقنا بإنشاء:",
+        "p-uxUi" : "تجربة المستخدم السلسة هي مفتاح رضا العملاء. نحن نقدم:",
+        "p-design" : "نقوم ببناء علامات تجارية قوية وسهلة التعرّف من خلال:",
+        "p-webMobileApp" : "نطور حلولًا رقمية قوية وقابلة للتطوير وسهلة الاستخدام، بما في ذلك:",
         "list": {
             "reelsOne": "ريلز جذابة تجذب الانتباه وتعزز الحضور على وسائل التواصل الاجتماعي.",
             "reelsTwo": "موشن جرافيكس ديناميكي يعزز السرد البصري.",
