--- a/public/i18n/ar.json
+++ b/public/i18n/ar.json
@@ -1,6 +1,12 @@
 {
     "english": "الإنجليزية",
     "arabic": "العربية",
+    "WELCOME_TO_MZ_MARKETING_AGENCY": "مرحبًا بك في وكالة MZ للتسويق",
+    "MZ_MARKETING_DESCRIPTION_1": "في MZ، نحن متخصصون في تقديم حلول تسويقية مبتكرة وفعالة مصممة لرفع مستوى علامتك التجارية. من الحملات الرقمية الاستراتيجية إلى العلامات التجارية الإبداعية وإدارة وسائل التواصل الاجتماعي، نساعد الشركات على النمو والازدهار في سوق تنافسية. يجمع فريقنا من الخبراء بين الإبداع والاستراتيجيات القائمة على البيانات لضمان تحقيق أقصى تأثير وتفاعل. سواء كنت شركة ناشئة تسعى إلى ترسيخ وجودها أو علامة تجارية راسخة تهدف إلى التوسع، فإن MZ هي شريكك الموثوق لتحقيق النجاح.",
+    "MZ_MARKETING_DESCRIPTION_2": "لنأخذ علامتك التجارية إلى المستوى التالي",
+    "SHOW_CATEGORIES": "عرض الفئات",
+    "PACKAGES": "الباقات",
+
     "link": {
         "home": "الرئيسية",
         "packages": "الباقات",
