--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -12,7 +12,8 @@
         "packages": "Packages",
         "categories": "Categories",
         "aboutUs": "About Us",
-        "contactUs": "Contact Us"
+        "contactUs": "Contact Us",
+        "usersChat": "users chat"
     },
     "auth": {
         "register": "Register",
